@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-07T16:22:36Z",
+  "timestamp" : "2022-06-08T16:19:54Z",
   "count_outdated" : 324,
   "uniques_outdated" : 181,
-  "count" : 346,
-  "uniques" : 197,
+  "count" : 347,
+  "uniques" : 198,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -77,6 +77,13 @@
     },
     {
       "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
