@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 6,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
